[package]
name = "libassemblyline_identidy"
version = "0.1.0"
edition = "2021"
authors = ["kulukami@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = { version = "0.4", features = ["std"] }

twox-hash = "2"
rand = "0.8"

sha2 = "0.10"
md5 = "0.7.0"
hex = "0.4"
delharc = "0.5"

yara-x = "0.11"
regex = "1.11"
uuid = "1.11"
zip = "2.2"

ffuzzy = { version = "0.3" }                     # ssdeep
tlsh2 = { version = "0.4", features = ["fast"] }

libmagic_rs = { git = "https://github.com/kulukami/libmagic_rs.git", branch = 'main' }

