[package]
name = "test"
version = "0.1.0"
edition = "2021"
authors = ["kulukami@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libassemblyline_identidy = { path = "../"}
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
debug = true

[[bin]]
name = "main"
path = "src/main.rs"
required-features = []